Fix background image stretching and improve Home page styling2

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 /* Общие стили */
 body {
   font-family: 'Roboto', sans-serif;
-  background-image: url('/background.jpg'); /* Исправляем путь */
-  background-attachment: fixed;
+  background-image: url('../public/background.jpg');  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
